# modular-rag-mcp

./: DEV_SPEC.md  README.md  main.py  pyproject.toml
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
scripts/: debug_mcp_stdio.py  evaluate.py  ingest.py  query.py  start_dashboard.py  start_mcp_server.py
src/core/: __init__.py  query_service.py  settings.py  tokenization.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/e2e/: test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_metadata_enricher_llm.py
tests/unit/: test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_composite_evaluator.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dashboard_config_service.py  test_dashboard_data_service.py  test_dashboard_evaluation_panel.py  test_dashboard_ingestion_manager.py  test_dashboard_query_trace_service.py  test_dashboard_trace_service.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_embedding_factory.py  test_eval_runner.py  (+35 more)
(+103 files in other folders)
